# Life-Architect-2-PC

./: Cargo.toml  README.md  build.rs
src/: app.rs  main.rs
src/app_core/: engine.rs  models.rs
src/core/: models.rs
src/data/: analytics_dao.rs  daily_quote_engine.rs  database.rs  global_events_engine.rs  goal_dao.rs  mod.rs  task_dao.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: mod.rs  xp_chart.rs
src/ui/screens/: analytics.rs  dashboard.rs  goals.rs  mod.rs  task_list.rs
